fixed small issue with overflow and small screens

--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,10 @@ html, body, #root {
   background-color: white;
 }
 
+.sidebar::-webkit-scrollbar {
+  display: none;
+}
+
 .fade-in {
 	opacity: 1;
 	animation-name: fadeInOpacity;
